--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,38 @@
     </head>
 
     <body>
+        <div class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/static/logo.png" alt="Cookpal">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <form class="d-flex ms-5" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-5 mb-lg-0 d-flex ">
+                  <li class="nav-item">
+                    <a class="nav-link active mt-2" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link ms-4 mt-2" href="#">Explore</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link ms-3 mt-2" href="#">Help</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link ms-5" href="#"><img src="/static/avatar.png" alt="avatar"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
         {% block main %}{% endblock %}
     </body>
 
