--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 {% endblock %}
 
 {% block main %}
+
+<!-- CAROUSEL -->
 <div class="container carousel-container">
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -45,5 +47,25 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+</div>
+
+<div class="container buttons-container">
+  <div class="row">
+    <div class="col">
+      <button type="button" class="btn btn-primary btn-lg btn-red">Recipes & Menus</button>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-primary btn-lg btn-green">Share your recipe</button>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-primary btn-lg btn-orange">Custom meal plan</button>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-primary btn-lg btn-darkorange">Create grocery list</button>
+    </div>
+    <div class="col">
+      <button type="button" class="btn btn-primary btn-lg btn-lightgreen">Cooking Tips & Tricks</button>
+    </div>
+  </div>
 </div>
 {% endblock %}
