--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,7 @@
 </div>
 </div>
 
+<!-- BUTTONS -->
 <div class="container buttons-container">
   <div class="row">
     <div class="col">
@@ -68,4 +69,54 @@
     </div>
   </div>
 </div>
+
+<!-- CARDS -->
+<div class="container buttons-container">
+  <h2>Recommended recipes</h2>
+  <div class="row">
+    <div class="col col-card">
+      <div class="card" style="width: 14rem; height: 14rem;">
+        <img src="/static/images/beans.jpg" class="card-img-top" alt="beans">
+        <div class="card-body">
+          <p class="card-text">Russian salad</p>
+        </div>
+      </div>
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/chickensomething.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text">Russian salad</p>
+          </div>
+        </div>
+
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/chickensomething.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text">Russian salad</p>
+          </div>
+        </div>
+
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/spaghetti.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text">Russian salad</p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/beans.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text">Russian salad</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    
 {% endblock %}
