--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');
+
 
 .nav-link {
     color: var(--Black, #253D4E);
@@ -63,4 +64,23 @@
     border-radius: 10px;
     background: #84BD00;
     border:#84BD00;
+}
+
+.buttons-container h2 {
+    color: #000;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 66.667% */
+    margin-bottom: 2rem;
+}
+
+.card p {
+    color: #252525;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 120% */
 }
