--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,10 @@
       <div class="card" style="width: 14rem; height: 14rem;">
         <img src="/static/images/beans.jpg" class="card-img-top" alt="beans">
         <div class="card-body">
-          <p class="card-text">Russian salad</p>
+          <p class="card-text card-paragraph">Bean spaghetti</p>
+          <p class="card-text timer-text">
+            40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+          </p>
         </div>
       </div>
       </div>
@@ -86,7 +89,10 @@
         <div class="card" style="width: 14rem; height: 14rem;">
           <img src="/static/images/chickensomething.jpg" class="card-img-top" alt="beans">
           <div class="card-body">
-            <p class="card-text">Russian salad</p>
+            <p class="card-text card-paragraph">Chicken salad</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
           </div>
         </div>
 
@@ -95,7 +101,10 @@
         <div class="card" style="width: 14rem; height: 14rem;">
           <img src="/static/images/chickensomething.jpg" class="card-img-top" alt="beans">
           <div class="card-body">
-            <p class="card-text">Russian salad</p>
+            <p class="card-text card-paragraph">Russian salad</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
           </div>
         </div>
 
@@ -104,7 +113,10 @@
         <div class="card" style="width: 14rem; height: 14rem;">
           <img src="/static/images/spaghetti.jpg" class="card-img-top" alt="beans">
           <div class="card-body">
-            <p class="card-text">Russian salad</p>
+            <p class="card-text card-paragraph">Chinese soup</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
           </div>
         </div>
       </div>
@@ -112,11 +124,127 @@
         <div class="card" style="width: 14rem; height: 14rem;">
           <img src="/static/images/beans.jpg" class="card-img-top" alt="beans">
           <div class="card-body">
-            <p class="card-text">Russian salad</p>
+            <p class="card-text card-paragraph">Bean Spaghetti</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
           </div>
         </div>
       </div>
     </div>
+    <div class="row row-card">
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/beans.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text card-paragraph">Bean Spaghetti</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/chickensomething.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text card-paragraph">Chicken salad</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/spaghetti.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text card-paragraph">Chinese soup</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/beans.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text card-paragraph">Bean Spaghetti</p>
+            <p class="card-text timer-text">
+              40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col col-card">
+        <div class="card" style="width: 14rem; height: 14rem;">
+          <img src="/static/images/chickensomething.jpg" class="card-img-top" alt="beans">
+          <div class="card-body">
+            <p class="card-text card-paragraph">Russian salad</p>
+              <p class="card-text timer-text">
+                40 min <span class="like-section"><img src="/static/images/like.png" alt="Like"></span><span class="comment-section"><img src="/static/images/comments.png" alt="Comment"></span>
+              </p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="container button-section">
+    <button type="button" class="btn btn-success btn-loadmore">Load More</button>
+  </div>
+  <div class="container">
+    <footer class="row row-cols-4 py-4 my-4 border-top">
+      <div class="col">
+        <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+          <img src="/static/images/logo.png" style="width: 40%;" alt="Cookpal">
+        </a>
+        <p class="text-muted">Cookpal is a recipe website with a wide variety of delicious recipes, easy-to-use search function. Join our community and let's cook together!</p>
+      </div>
+      <div class="col">
+        <ul class="nav flex-column">
+          <h5>Company</h5>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Home</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Explore</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Team</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">About us</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Activity</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="nav flex-column">
+          <h5>Resources</h5>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Blog</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Use cases</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Testimonials</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Insights</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col">
+          <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+            <img src="/static/images/logo.png" style="width: 40%;" alt="Cookpal">
+          </a>
+          <p class="text-muted">Ut risus mattis interdum faucibus facilisi. Facilisi purus accumsan aliquam.</p>
+      </div>
+    </footer>
+  </div>
     
 {% endblock %}
