--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 
+{% block style%}
+<link href="/static/css/index.css" rel="stylesheet">
+{% endblock %}
 
 {% block title %}
     Index
