--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
-        <link href="/static/styles.css" rel="stylesheet">
+        {% block style %}{% endblock %}
 
         <title>Finalproject: {% block title %}{% endblock %}</title>
 
@@ -21,7 +21,7 @@
         <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img src="/static/images/logo.png" style="width: 60%" alt="Cookpal">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mt-2 ">
                   <li class="nav-item">
-                    <a class="nav-link active mt-2" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active mt-2" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link ms-4 mt-2" href="#">Explore</a>
@@ -42,10 +42,17 @@
                   <li class="nav-item">
                     <a class="nav-link ms-3 mt-2" href="#">Help</a>
                   </li>
+                  {% if session["user_id"] %}
                   <li class="nav-item">
                     <a class="nav-link ms-5" href="#"><img src="/static/images/avatar.png" alt="avatar"></a>
                   </li>
+                  {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link ms-3 mt-2" href="/register">Register</a>
+                  </li>
+                  {% endif %}
                 </ul>
+                
               </div>
             </div>
           </nav>
