Optimized login & register

--- a/static/css/register.css
+++ b/static/css/register.css
@@ -17,3 +17,12 @@
     margin-top: 2rem;
 }
 
+.container {
+    margin-top: 1rem;
+    border-radius: 0.25rem;
+
+}
+
+.register-btn {
+    color: white!important;
+}
