--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,54 @@
 {% extends "layout.html" %}
 
+{% block style%}
+<link href="/static/css/register.css" rel="stylesheet">
+{% endblock %}
+
 {% block title %}
     Log In
 {% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+<div class="container">
+<section class="vh-100 bg-image"
+style="background-image: url('/static/images/registerbg.jpg'); background-position:50% 50%;
+background-size:cover;">
+<div class="mask d-flex align-items-center h-100 gradient-custom-3">
+  <div class="container h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body p-5">
+            <h2 class="text-uppercase text-center mb-5">Log in</h2>
+
+            <form action="/login" method="post">
+
+              <div class="form-outline mb-4">
+                <input autocomplete="off" autofocus type="text" id="username" name="username" class="form-control form-control-lg" />
+                <label class="form-label" for="username">Username</label>
+              </div>
+
+              <div class="form-outline mb-4">
+                <input type="password" id="password" name="password" class="form-control form-control-lg" />
+                <label class="form-label" for="password">Password</label>
+              </div>
+
+              <div class="d-flex justify-content-center">
+                <button type="submit"
+                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body register-btn">Log in</button>
+              </div>
+
+              <p class="text-center text-muted mt-5 mb-0">Forgot password? <a href="#"
+                class="fw-bold text-body"><u>Change password</u></a></p>
+
+            </form>
+
+          </div>
         </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
-    </form>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+</div>
 {% endblock %}
