--- a/templates/register.html
+++ b/templates/register.html
@@ -9,9 +9,10 @@
 {% endblock %}
 
 {% block main %}
+<div class="container">
 <section class="vh-100 bg-image"
-style="background-image: url('/static/images/registerbg.jpg'); background-position:50% 50%;
-background-size:cover;">
+style="background-image: url('/static/images/registerbg.jpg'); background-position:100% 100%;
+background-size:cover; width: 100%;">
 <div class="mask d-flex align-items-center h-100 gradient-custom-3">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -39,7 +40,7 @@ background-size:cover;">
 
               <div class="d-flex justify-content-center">
                 <button type="submit"
-                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body register-btn">Register</button>
               </div>
 
               <p class="text-center text-muted mt-5 mb-0">Already have an account? <a href="/login"
@@ -54,4 +55,5 @@ background-size:cover;">
   </div>
 </div>
 </section>
+</div>
 {% endblock %}
