Added share recipe

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,9 @@
       <button type="button" class="btn btn-primary btn-lg btn-red">Recipes & Menus</button>
     </div>
     <div class="col">
-      <button type="button" class="btn btn-primary btn-lg btn-green">Share your recipe</button>
+      <a href="/share" class="btn-link">
+        <button type="button" class="btn btn-primary btn-lg btn-green">Share your recipe</button>
+      </a>
     </div>
     <div class="col">
       <button type="button" class="btn btn-primary btn-lg btn-orange">Custom meal plan</button>
