Added menus & recipes

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,9 @@
 <div class="container buttons-container">
   <div class="row">
     <div class="col">
+      <a href="/recipes" class="btn-link">
       <button type="button" class="btn btn-primary btn-lg btn-red">Recipes & Menus</button>
+      </a>
     </div>
     <div class="col">
       <a href="/share" class="btn-link">
