--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
                     <a class="nav-link active mt-2" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link ms-4 mt-2" href="#">Explore</a>
+                    <a class="nav-link ms-4 mt-2" href="/recipes">Explore</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link ms-3 mt-2" href="#">Help</a>
