--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,64 +1,93 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <head>
+    <!-- http://getbootstrap.com/docs/5.1/ -->
+    <link
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      rel="stylesheet"
+    />
+    <script
+      crossorigin="anonymous"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    ></script>
 
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
+    <link href="/static/favicon.ico" rel="icon" />
 
-        <!-- http://getbootstrap.com/docs/5.1/ -->
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-        <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
+    {% block style %}{% endblock %} {% block script %}{% endblock %}
 
-        <link href="/static/favicon.ico" rel="icon">
+    <title>Finalproject: {% block title %}{% endblock %}</title>
+  </head>
 
-        {% block style %}{% endblock %}
-
-        <title>Finalproject: {% block title %}{% endblock %}</title>
-
-    </head>
-
-    <body>
-        <div class="container">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <img src="/static/images/logo.png" style="width: 60%" alt="Cookpal">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mt-2 ">
-                  <li class="nav-item">
-                    <a class="nav-link active mt-2" aria-current="page" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link ms-4 mt-2" href="/recipes">Explore</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link ms-3 mt-2" href="#">Help</a>
-                  </li>
-                  {% if session["user_id"] %}
-                  <li class="nav-item">
-                    <a class="nav-link ms-5 mt-1" href="/account"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                      <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                      <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                    </svg></a>
-                  </li>
-                  {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link ms-3 mt-2" href="/register">Register</a>
-                  </li>
-                  {% endif %}
-                </ul>
-                
-              </div>
-            </div>
-          </nav>
+  <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <img
+              src="/static/images/logo.png"
+              style="width: 60%"
+              alt="Cookpal"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mt-2">
+              <li class="nav-item">
+                <a class="nav-link active mt-2" aria-current="page" href="/"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-4 mt-2" href="/recipes">Explore</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-3 mt-2" href="#">Help</a>
+              </li>
+              {% if session["user_id"] %}
+              <li class="nav-item">
+                <a class="nav-link ms-5 mt-1" href="/account"
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="32"
+                    height="32"
+                    fill="currentColor"
+                    class="bi bi-person-circle"
+                    viewBox="0 0 16 16"
+                  >
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                    <path
+                      fill-rule="evenodd"
+                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+                    /></svg
+                ></a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link ms-3 mt-2" href="/register">Register</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
         </div>
-        {% block main %}{% endblock %}
-    </body>
-
+      </nav>
+    </div>
+    {% block main %}{% endblock %}
+  </body>
 </html>
