--- a/static/css/recipes.css
+++ b/static/css/recipes.css
@@ -27,14 +27,7 @@
 .cont_modal {
   position: relative;
   max-width: 100%;
-  height: 400px;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  transition-delay: 0.7s;
-  -webkit-transition-delay: 0.7s;
-  -o-transition-delay: 0.7s;
-  transition-delay: 0.7s;
+  max-height: 400px;
 }
 
 .cont_photo {
@@ -114,71 +107,6 @@
   transition-delay: 0.7s;
 }
 
-.cont_mins {
-  position: relative;
-  float: left;
-  width: 100%;
-}
-
-.sub_mins {
-  position: relative;
-  float: left;
-  width: 60px;
-  height: 60px;
-  background-color: rgba(255, 253, 112, 0.8);
-  border-radius: 50%;
-  margin: 16px;
-  margin-bottom: 0px;
-  opacity: 0;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  transition: all 0.5s;
-  transition-delay: 1s;
-  -webkit-transition-delay: 1s;
-  -o-transition-delay: 1s;
-  transition-delay: 1s;
-}
-
-.sub_mins > h3 {
-  font-size: 24px;
-  margin-top: 7px;
-  margin-bottom: -15px;
-}
-
-.sub_mins > span {
-  font-size: 9px;
-  font-weight: 700;
-}
-
-.cont_servings {
-  position: relative;
-  float: left;
-  width: 60px;
-  height: 60px;
-  background-color: rgba(255, 253, 112, 0.8);
-  border-radius: 50%;
-  margin: 16px;
-  opacity: 0;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  transition-delay: 0.7s;
-  -webkit-transition-delay: 0.7s;
-  -o-transition-delay: 0.7s;
-  transition-delay: 0.7s;
-}
-
-.cont_servings > h3 {
-  font-size: 24px;
-  margin-top: 5px;
-  margin-bottom: -15px;
-}
-
-.cont_servings > span {
-  font-size: 9px;
-  font-weight: 700;
-}
 .cont_icon_right {
   position: relative;
   float: right;
@@ -190,115 +118,23 @@
   color: #fff;
 }
 
-.cont_detalles {
-  position: absolute;
-  bottom: -185px;
-  height: 200px;
-  border-radius: 5px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+100,000000+101&0+0,0.65+68 */
-  background: -moz-linear-gradient(
-    top,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.65) 68%,
-    rgba(0, 0, 0, 0.65) 100%,
-    rgba(0, 0, 0, 0.65) 101%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    top,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.65) 68%,
-    rgba(0, 0, 0, 0.65) 100%,
-    rgba(0, 0, 0, 0.65) 101%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.65) 68%,
-    rgba(0, 0, 0, 0.65) 100%,
-    rgba(0, 0, 0, 0.65) 101%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-
-  width: 100%;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  transition-delay: 1.2s;
-  -webkit-transition-delay: 0.7s;
-  -o-transition-delay: 0.7s;
-  transition-delay: 0.7s;
-}
-
-.cont_detalles > h3 {
-  margin-top: 50px;
-  margin-left: 1rem;
-  color: #fff;
-  font-size: 24px;
-}
-
-.cont_detalles > p {
-  color: #fff;
-  width: 80%;
-  text-align: left;
-  margin-left: 1rem;
-  font-size: 14px;
-}
-
 /* ---------------- Css Tabs -------- */
 
 .cont_tabs {
   position: relative;
+  margin-left: 50px;
+  margin-top: 10px;
   float: left;
-  width: 410px;
+  width: 100%;
   height: 60px;
   border-bottom: 3px solid #ededec;
-}
-
-.cont_tabs > ul {
-  width: 300px;
-  background-color: #eee;
-}
-
-.cont_tabs > ul > li {
-  position: relative;
-  float: left;
-  width: 50%;
-  list-style: none;
-}
-
-.cont_tabs > ul > li > a {
-  border-top: 7px solid #ed346c;
-  position: relative;
-  display: block;
-  float: left;
-  padding-top: 15px;
-  color: #241c3e;
-  text-decoration: none;
-  margin-left: 15px;
-  font-size: 14px;
-}
-
-.cont_tabs > ul > li:first-child > a {
-  border-top: 7px solid rgba(237, 52, 108, 0);
-  margin-top: 0px;
-  color: #9a96a4;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  transition: all 0.2s;
-}
-
-.cont_tabs > ul > li:first-child > a:hover {
-  border-top: 7px solid #ed346c;
-  padding-top: 15px;
-  color: #241c3e;
-  margin-top: 0px;
 }
 
 .cont_title_preparation {
   position: relative;
   float: left;
   margin: 10px 0px;
-  width: 410px;
+  width: 100%;
 }
 .cont_title_preparation > p {
   font-weight: 700;
@@ -311,9 +147,10 @@
 .cont_info_preparation {
   position: relative;
   float: left;
+  width: 100%;
 }
 .cont_info_preparation > p {
-  margin: 5px 0px;
+  margin: 0px 0px;
   margin-left: 50px;
   border-left: 2px solid #e3e3e3;
   font-size: 12px;
@@ -324,6 +161,9 @@
   color: #565656;
 }
 
+.cont_title_preparation > h5 {
+  margin-left: 50px;
+}
 .cont_btn_mas_dets {
   position: absolute;
   bottom: 0px;
@@ -343,7 +183,7 @@
 
 .cont_text_det_preparation {
   position: relative;
-  width: 410px;
+  width: 100%;
 }
 
 .row {
