--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,15 +4,11 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet"
 />
-{% endblock %} {% block title %} Recipes & Menus {% endblock %} {% block script
-%}
-<script src="/static/js/recipes.js"></script>
-{% endblock %}{% block main%}
+{% endblock %} {% block title %} Recipes & Menus {% endblock %} {% block main%}
 <div class="container recipes-container">
-  <!--<div class="row">-->
   {% for recipe in recipes %}
   <div class="row">
-    <div class="cont_modal" id="cont_modal{{recipe['id']}}">
+    <div class="cont_modal">
       <div class="cont_photo">
         <div class="cont_img_back">
           <img src="/static/uploads/{{recipe['image']}}" alt="" />
@@ -21,31 +17,22 @@
         <div class="cont_icon_right">
           <a href="#"> <i class="material-icons">&#xE8E7;</i></a>
         </div>
-        <div class="cont_detalles">
-          <h3>{{recipe['title']}}</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-            sagittis est est aliquam, sed faucibus massa lobortis. Maecenas non
-            est justo.
-          </p>
-        </div>
       </div>
       <div class="cont_text_ingredients">
         <div class="cont_over_hidden">
           <div class="cont_tabs">
-            <ul>
-              <li>
-                <a href="#"><h5>INGREDIENTS</h5></a>
-              </li>
-              <li>
-                <a href="#"><h5>PREPARATION</h5></a>
-              </li>
-            </ul>
+            <h4>{{recipe['title']}}</h4>
           </div>
 
           <div class="cont_text_det_preparation">
             <div class="cont_title_preparation">
-              <p>{{recipe['title']}}</p>
+              <h5>Ingredients</h5>
+            </div>
+            <div class="cont_info_preparation">
+              <p>{{recipe['ingredients']}}</p>
+            </div>
+            <div class="cont_title_preparation">
+              <h5>Preparation</h5>
             </div>
             <div class="cont_info_preparation">
               <p>{{recipe['recipe']}}</p>
@@ -56,6 +43,5 @@
     </div>
   </div>
   {% endfor %}
-  <!--</div>-->
 </div>
 {% endblock %}
