--- a/static/css/list.css
+++ b/static/css/list.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap");
+/* Option 2: Import via CSS */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
 .nav-link {
   color: var(--Black, #253d4e);
@@ -39,6 +41,22 @@ button {
   margin: 0;
   padding: 0;
 }
+#cart-list {
+  text-decoration: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#cart-list li {
+  text-decoration: none;
+  padding: 10px;
+  font-weight: bold;
+  border-radius: 20px;
+  margin-bottom: 0.5rem;
+}
+#cart-list li {
+  background-color: #509e2f;
+}
 
 #list li {
   text-decoration: none;
@@ -52,12 +70,6 @@ button {
 }
 #list li:nth-child(even) {
   background-color: #f1f1f1;
-}
-
-.check {
-  text-decoration: line-through;
-  background-color: black !important;
-  color: white;
 }
 
 button.close {
@@ -84,6 +96,13 @@ button.close {
   margin-bottom: 1rem;
 }
 
-.material-symbols-outlined {
+.close {
   float: right;
+}
+
+.check {
+  color: black;
+  background: transparent;
+  border: none !important;
+  float: left;
 }
