--- a/templates/list.html
+++ b/templates/list.html
@@ -13,6 +13,8 @@
     <input id="inputText" type="text" placeholder="Add your items here" />
     <button onclick="addToList()">add</button>
     <ul id="list"></ul>
+    <h2>In cart</h2>
+    <ul id="cart-list"></ul>
   </div>
 </div>
 
