Implemented tips & tricks

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,11 +105,6 @@
       </a>
     </div>
     <div class="col">
-      <button type="button" class="btn btn-primary btn-lg btn-orange">
-        Custom meal plan
-      </button>
-    </div>
-    <div class="col">
       <a href="/list" class="btn-link">
         <button type="button" class="btn btn-primary btn-lg btn-darkorange">
           Create grocery list
@@ -117,9 +112,18 @@
       </a>
     </div>
     <div class="col">
-      <button type="button" class="btn btn-primary btn-lg btn-lightgreen">
-        Cooking Tips & Tricks
-      </button>
+      <a href="/tips" class="btn-link">
+        <button type="button" class="btn btn-primary btn-lg btn-lightgreen">
+          Cooking Tips & Tricks
+        </button>
+      </a>
+    </div>
+    <div class="col">
+      <a href="/sharetips" class="btn-link">
+        <button type="button" class="btn btn-primary btn-lg btn-orange">
+          Share your Tips
+        </button>
+      </a>
     </div>
   </div>
 </div>
