--- a/static/css/account.css
+++ b/static/css/account.css
@@ -192,3 +192,24 @@
 .meal-container {
   margin-top: 3rem;
 }
+
+.cont_tips {
+  position: relative;
+  max-width: 100%;
+  height: 20%;
+  border: 1px gray solid;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.row-tips {
+  margin-top: 1rem;
+}
+
+.button-container {
+  margin-top: 2rem;
+}
+
+.btn-lg {
+  width: 200px;
+}
