--- a/templates/account.html
+++ b/templates/account.html
@@ -41,9 +41,19 @@
   </div>
   {% endfor %}
 </div>
-<div class="container meal-container"><h4>Grocery list</h4></div>
+<div class="container meal-container">
+  <h4>Shared tips</h4>
+  {% for tip in tips %}
+  <div class="row row-tips">
+    <div class="cont_tips">
+      <h4>{{tip['title']}}</h4>
+      <p>{{tip['post']}}</p>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 
-<div class="container">
+<div class="container button-container">
   <form action="/logout">
     <button
       type="submit"
