--- a/templates/apology.html
+++ b/templates/apology.html
@@ -1,10 +1,12 @@
-{% extends "layout.html" %}
-
-{% block title %}
-    Apology
-{% endblock %}
-
-{% block main %}
-    <!-- https://memegen.link/ -->
-    <img alt="{{ top }}" class="border img-fluid" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png&width=400" title="{{ top }}">
+{% extends "layout.html" %} {% block title %} Apology {% endblock %} {% block
+style%}
+<link href="/static/css/apology.css" rel="stylesheet" />
+{% endblock %} {% block main %}
+<!-- https://memegen.link/ -->
+<img
+  alt="{{ top }}"
+  class="border img-fluid"
+  src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png&width=400"
+  title="{{ top }}"
+/>
 {% endblock %}
