--- a/static/css/account.css
+++ b/static/css/account.css
@@ -210,6 +210,9 @@
   margin-top: 2rem;
 }
 
-.btn-lg {
-  width: 200px;
+.account-container {
+  margin-top: 2rem;
+}
+.recipes-container {
+  margin-top: 2rem;
 }
