--- a/templates/apology.html
+++ b/templates/apology.html
@@ -1,5 +1,4 @@
-{% extends "layout.html" %} {% block title %} Apology {% endblock %} {% block
-style%}
+{% extends "layout.html" %} {% block style%}
 <link href="/static/css/apology.css" rel="stylesheet" />
 {% endblock %} {% block main %}
 <!-- https://memegen.link/ -->
