--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,7 +4,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet"
 />
-{% endblock %} {% block title %} Recipes & Menus {% endblock %} {% block main%}
+{% endblock %} {% block main%}
 <div class="container recipes-container">
   {% for recipe in recipes %}
   <div class="row">
