--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block style%}
 <link href="/static/css/index.css" rel="stylesheet" />
-{% endblock %} {% block title %} Index {% endblock %} {% block main %}
+{% endblock %} {% block main %}
 
 <!-- CAROUSEL -->
 <div class="container carousel-container">
@@ -322,71 +322,6 @@
 </div>
 <div class="container button-section">
   <button type="button" class="btn btn-success btn-loadmore">Load More</button>
-</div>
-<div class="container">
-  <footer class="row row-cols-4 py-4 my-4 border-top">
-    <div class="col">
-      <a
-        href="/"
-        class="d-flex align-items-center mb-3 link-dark text-decoration-none"
-      >
-        <img src="/static/images/logo.png" style="width: 40%" alt="Cookpal" />
-      </a>
-      <p class="text-muted">
-        Cookpal is a recipe website with a wide variety of delicious recipes,
-        easy-to-use search function. Join our community and let's cook together!
-      </p>
-    </div>
-    <div class="col">
-      <ul class="nav flex-column">
-        <h5>Company</h5>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Home</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Explore</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Team</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">About us</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Activity</a>
-        </li>
-      </ul>
-    </div>
-    <div class="col">
-      <ul class="nav flex-column">
-        <h5>Resources</h5>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Blog</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Use cases</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Testimonials</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-muted">Insights</a>
-        </li>
-      </ul>
-    </div>
-    <div class="col">
-      <a
-        href="/"
-        class="d-flex align-items-center mb-3 link-dark text-decoration-none"
-      >
-        <img src="/static/images/logo.png" style="width: 40%" alt="Cookpal" />
-      </a>
-      <p class="text-muted">
-        Ut risus mattis interdum faucibus facilisi. Facilisi purus accumsan
-        aliquam.
-      </p>
-    </div>
-  </footer>
 </div>
 
 {% endblock %}
