--- a/templates/list.html
+++ b/templates/list.html
@@ -4,7 +4,7 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
 />
-{% endblock %} {% block title %} Grocery list {% endblock %} {% block script %}
+{% endblock %} {% block script %}
 <script src="/static/js/list.js"></script>
 {% endblock %} {% block main%}
 <div class="container" id="header">
