--- a/templates/register.html
+++ b/templates/register.html
@@ -1,59 +1,83 @@
-{% extends "layout.html" %}
-
-{% block style%}
-<link href="/static/css/register.css" rel="stylesheet">
-{% endblock %}
-
-{% block title %}
-    Register
-{% endblock %}
-
-{% block main %}
+{% extends "layout.html" %} {% block style%}
+<link href="/static/css/register.css" rel="stylesheet" />
+{% endblock %} {% block main %}
 <div class="container">
-<section class="vh-100 bg-image"
-style="background-image: url('/static/images/registerbg.jpg'); background-position:100% 100%;
-background-size:cover; width: 100%;">
-<div class="mask d-flex align-items-center h-100 gradient-custom-3">
-  <div class="container h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-        <div class="card" style="border-radius: 15px;">
-          <div class="card-body p-5">
-            <h2 class="text-uppercase text-center mb-5">Create an account</h2>
+  <section
+    class="vh-100 bg-image"
+    style="
+      background-image: url('/static/images/registerbg.jpg');
+      background-position: 100% 100%;
+      background-size: cover;
+      width: 100%;
+    "
+  >
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+      <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+            <div class="card" style="border-radius: 15px">
+              <div class="card-body p-5">
+                <h2 class="text-uppercase text-center mb-5">
+                  Create an account
+                </h2>
 
-            <form action="/register" method="post">
+                <form action="/register" method="post">
+                  <div class="form-outline mb-4">
+                    <input
+                      autocomplete="off"
+                      autofocus
+                      type="text"
+                      id="username"
+                      name="username"
+                      class="form-control form-control-lg"
+                    />
+                    <label class="form-label" for="username">Username</label>
+                  </div>
 
-              <div class="form-outline mb-4">
-                <input autocomplete="off" autofocus type="text" id="username" name="username" class="form-control form-control-lg" />
-                <label class="form-label" for="username">Username</label>
+                  <div class="form-outline mb-4">
+                    <input
+                      type="password"
+                      id="password"
+                      name="password"
+                      class="form-control form-control-lg"
+                    />
+                    <label class="form-label" for="password">Password</label>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                    <input
+                      type="password"
+                      id="confirmation"
+                      name="confirmation"
+                      class="form-control form-control-lg"
+                    />
+                    <label class="form-label" for="confirmation"
+                      >Repeat your password</label
+                    >
+                  </div>
+
+                  <div class="d-flex justify-content-center">
+                    <button
+                      type="submit"
+                      class="btn btn-success btn-block btn-lg gradient-custom-4 text-body register-btn"
+                    >
+                      Register
+                    </button>
+                  </div>
+
+                  <p class="text-center text-muted mt-5 mb-0">
+                    Already have an account?
+                    <a href="/login" class="fw-bold text-body"
+                      ><u>Login here</u></a
+                    >
+                  </p>
+                </form>
               </div>
-
-              <div class="form-outline mb-4">
-                <input type="password" id="password" name="password" class="form-control form-control-lg" />
-                <label class="form-label" for="password">Password</label>
-              </div>
-
-              <div class="form-outline mb-4">
-                <input type="password" id="confirmation" name="confirmation" class="form-control form-control-lg" />
-                <label class="form-label" for="confirmation">Repeat your password</label>
-              </div>
-
-              <div class="d-flex justify-content-center">
-                <button type="submit"
-                  class="btn btn-success btn-block btn-lg gradient-custom-4 text-body register-btn">Register</button>
-              </div>
-
-              <p class="text-center text-muted mt-5 mb-0">Already have an account? <a href="/login"
-                  class="fw-bold text-body"><u>Login here</u></a></p>
-
-            </form>
-
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-</section>
+  </section>
 </div>
 {% endblock %}
