--- a/templates/sharetips.html
+++ b/templates/sharetips.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block style%}
 <link href="/static/css/share.css" rel="stylesheet" />
-{% endblock %} {% block title %} Share Tips {% endblock %} {% block main %}
+{% endblock %} {% block main %}
 <div class="container share-container">
   <h1>Share your tips!</h1>
   <form
