--- a/templates/tips.html
+++ b/templates/tips.html
@@ -4,7 +4,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet"
 />
-{% endblock %} {% block title %} Tips & Tricks {% endblock %} {% block main%}
+{% endblock %} {% block main%}
 <div class="container recipes-container">
   {% for tip in tips %}
   <div class="row">
