Responsive index and footer

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
     ></script>
 
     <link href="/static/favicon.ico" rel="icon" />
+    <link href="/static/css/layout.css" rel="stylesheet" />
 
     {% block style %}{% endblock %} {% block script %}{% endblock %}
 
@@ -37,7 +38,7 @@
             />
           </a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler navbar-light"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
