--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,143 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap");
 
 .nav-link {
-    color: var(--Black, #253D4E);
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+  color: var(--Black, #253d4e);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
 .nav-link:hover {
-    color: #509E2F;
+  color: #509e2f;
 }
 
 .carousel-container {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .buttons-container {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .btn-lg {
-    display: flex;
-    width: 236.8px;
-    height: 86px;
-    padding: 30px 29.8px 30px 29px;
-    justify-content: center;
-    align-items: center;
-    color: #FFF;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 127%; /* 20.32px */
+  display: flex;
+  width: 236.8px;
+  height: 86px;
+  padding: 30px 29px 30px 29px;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 127%; /* 20.32px */
 }
 
 .btn-red {
-    border-radius: 10px;
-    background: #F6784C;
-    border:#F6784C;
+  border-radius: 10px;
+  background: #f6784c;
+  border: #f6784c;
 }
 
 .btn-green {
-    border-radius: 10px;
-    background: #C4D600;
-    border:#C4D600
+  border-radius: 10px;
+  background: #c4d600;
+  border: #c4d600;
 }
 
 .btn-orange {
-    border-radius: 10px;
-    background: #EAAA00;
-    border:#EAAA00;
+  border-radius: 10px;
+  background: #eaaa00;
+  border: #eaaa00;
 }
 
 .btn-darkorange {
-    border-radius: 10px;
-    background: #ED8B00;
-    border:#ED8B00;
+  border-radius: 10px;
+  background: #ed8b00;
+  border: #ed8b00;
 }
 
 .btn-lightgreen {
-    border-radius: 10px;
-    background: #84BD00;
-    border:#84BD00;
+  border-radius: 10px;
+  background: #84bd00;
+  border: #84bd00;
 }
 
 .buttons-container h2 {
-    color: #000;
-    font-family: Inter;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 24px; /* 66.667% */
-    margin-bottom: 2rem;
+  color: #000;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 66.667% */
+  margin-bottom: 2rem;
 }
 
 .card-paragraph {
-    color: #252525;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px; /* 120% */
-    margin: 0;
+  color: #252525;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 120% */
+  margin: 0;
 }
 
 .row-card {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .timer-text {
-    color: #DC582A;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 136.523%; /* 27.305px */
-    margin: 0;
+  color: #dc582a;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 136.523%; /* 27.305px */
+  margin: 0;
 }
 
-
 .like-section {
-    float: right;
+  float: right;
 }
 
 .comment-section {
-    float:right;
-    margin-right: 0.5rem;
+  float: right;
+  margin-right: 0.5rem;
 }
 
 .card-img-top {
-    height: 100%;
+  height: 100%;
 }
 
 .button-section {
-    margin: 8rem;
+  margin: 6rem auto;
 }
 
 .btn-loadmore {
-    display: flex;
-    margin: auto;
-    display: flex;
-    width: 400px;
-    padding: 13px 0px 12px 0px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    background: #509E2F;
-    border: #509E2F;
-    color: #FFF;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+  display: flex;
+  margin: auto;
+  display: flex;
+  width: 400px;
+  padding: 13px 0px 12px 0px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  background: #509e2f;
+  border: #509e2f;
+  color: #fff;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
 .btn-link {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+/* RESPONSIVE WEB DESIGN */
+
+/* DESKTOP SMALLER SCREEN */
+@media (max-width: 1366px) {
+  .btn-lg {
+    width: 200px;
+    height: 66px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .btn-lg {
+    width: 180px;
+    height: 46px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .btn-lg {
+    width: 160px;
+    height: 26px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 992px) {
+  .btn-lg {
+    width: 80px;
+    height: 80px;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  .btn-lg {
+    width: 20px;
+    height: 80px;
+    font-size: 12px;
+  }
+  .col {
+    margin-right: -1rem;
+  }
 }
